[gd_scene load_steps=6 format=3 uid="uid://cfuubs3c5j6y4"]

[ext_resource type="Texture2D" uid="uid://dtlrkgpcu5mgd" path="res://assets/images/UI/SquareButtonNormal.png" id="1_bkx8g"]
[ext_resource type="Texture2D" uid="uid://cmg02jqmd25wg" path="res://assets/images/UI/SquareButtonClick.png" id="2_f2rl5"]
[ext_resource type="Texture2D" uid="uid://dfjbs3u8pl7x4" path="res://assets/images/UI/SquareButtonHover.png" id="3_6e30r"]
[ext_resource type="FontFile" uid="uid://800ajsr6nfi3" path="res://assets/fonts/Lemon Days.ttf" id="4_84iu6"]
[ext_resource type="Script" path="res://src/LevelSelect/level_button.gd" id="4_kv6k8"]

[node name="LevelButton" type="TextureButton"]
texture_normal = ExtResource("1_bkx8g")
texture_pressed = ExtResource("2_f2rl5")
texture_hover = ExtResource("3_6e30r")
script = ExtResource("4_kv6k8")

[node name="LevelText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_84iu6")
theme_override_font_sizes/font_size = 92
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="." to="." method="_on_pressed"]
